# ark_standalone_highmem

./: .gitignore  README.md  script
.github/workflows/: build.yml
kern/: CMakeLists.txt  HighMem.c  Log.h  Main.c  exports.yml
user/: CMakeLists.txt  Log.h  Main.c  PspEmu.c  exports.yml
